Serveral improvements [Feature] Hidden overflow-x scroll bar on listing page [Feature] Fixed bugs on hints [Feature] Disabled closing modals by clicking dimmer area. Use closing button instead

--- a/frontend/src/components/MainListingPoll.module.css
+++ b/frontend/src/components/MainListingPoll.module.css
@@ -16,7 +16,7 @@
 }
 
 .collapse {
-    overflow: scroll;
+    overflow-y: scroll;
     max-height: 400px;
 }
 
